style: fix text alignment

--- a/ui/src/design-system/components/card/card.module.scss
+++ b/ui/src/design-system/components/card/card.module.scss
@@ -39,7 +39,7 @@
   justify-content: center;
   flex-direction: column;
   flex: 1;
-  padding: 12px 16px;
+  padding: 16px;
   background-color: $color-generic-white;
 }
 
