--- a/ui/src/pages/job-details/job-stage-label/job-stage-label.module.scss
+++ b/ui/src/pages/job-details/job-stage-label/job-stage-label.module.scss
@@ -7,7 +7,7 @@
   align-items: center;
   justify-content: center;
   gap: 8px;
-  padding: 0 8px;
+  padding: 4px 8px 2px;
   border-radius: 2px;
   background-color: $color-primary-2-50;
   @include paragraph-x-small();
